--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
             routerLinkActive="active" 
             class="navbar-brand font-weight-bold"
             href="javascript:;">
-                STAR WARS
+                <img class="logo" src="https://static-mh.content.disney.io/starwars/assets/navigation/sw_logo_stacked-336c62367939.png" alt="">
         </a>
         <div class="collapse navbar-collapse float-right" id="navbar" [collapse]="isCollapsed">
             <ul class="navbar-nav nav ml-auto">
