Added shadows for cards

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <h4 class="text-center">Перейдите по вкладкам чтобы получить информацию</h4>
     <div class="row mt-5">
         <div class="col-md-3 d-flex align-items-stretch mb-2">
-            <div class="card">
+            <div class="card shadow">
                 <img src="https://starwars-visualguide.com/assets/img/categories/character.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Персонажи</h5>
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="col-md-3 d-flex align-items-stretch mb-2">
-            <div class="card">
+            <div class="card shadow">
                 <img src="https://starwars-visualguide.com/assets/img/categories/planets.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Планеты</h5>
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="col-md-3 d-flex align-items-stretch mb-2">
-            <div class="card">
+            <div class="card shadow">
                 <img src="https://starwars-visualguide.com/assets/img/categories/species.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Расы</h5>
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="col-md-3 d-flex align-items-stretch mb-2">
-            <div class="card">
+            <div class="card shadow">
                 <img src="https://starwars-visualguide.com/assets/img/categories/starships.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Звездные корабли</h5>
