--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -54,7 +54,7 @@
     </div>
 
     <p class="lead mt-5 text-center">
-        Сайт сделан с использованием Angular, Bootstrap, Webpack, SCSS
+        Сайт сделан с использованием Angular, Bootstrap, SCSS
     </p>
 </div>
     
